standardize the version of maven and java